@@ -6,8 +6,9 @@ import com.comet.opik.api.DeleteFeedbackScore;
 import com.comet.opik.api.DeleteTraceThreads;
 import com.comet.opik.api.ErrorInfo;
 import com.comet.opik.api.FeedbackScore;
-import com.comet.opik.api.FeedbackScoreBatch;
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreBatchContainer;
+import com.comet.opik.api.FeedbackScoreItem;
+import com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem.FeedbackScoreBatchItemBuilder;
 import com.comet.opik.api.FeedbackScoreNames;
 import com.comet.opik.api.Guardrail;
 import com.comet.opik.api.Project;
@@ -48,6 +49,7 @@ import com.comet.opik.api.resources.utils.resources.SpanResourceClient;
 import com.comet.opik.api.resources.utils.resources.TraceResourceClient;
 import com.comet.opik.api.resources.utils.spans.SpanAssertions;
 import com.comet.opik.api.resources.utils.traces.TraceAssertions;
+import com.comet.opik.api.resources.utils.traces.TraceDBUtils;
 import com.comet.opik.api.resources.utils.traces.TracePageTestAssertion;
 import com.comet.opik.api.resources.utils.traces.TraceStatsAssertion;
 import com.comet.opik.api.resources.utils.traces.TraceStreamTestAssertion;
@@ -64,6 +66,7 @@ import com.comet.opik.domain.filter.FilterQueryBuilder;
 import com.comet.opik.extensions.DropwizardAppExtensionProvider;
 import com.comet.opik.extensions.RegisterApp;
 import com.comet.opik.infrastructure.auth.RequestContext;
+import com.comet.opik.infrastructure.db.TransactionTemplateAsync;
 import com.comet.opik.infrastructure.usagelimit.Quota;
 import com.comet.opik.podam.InRangeStrategy;
 import com.comet.opik.podam.PodamFactoryUtils;
@@ -85,6 +88,7 @@ import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.commons.lang3.RandomUtils;
 import org.apache.http.HttpStatus;
 import org.assertj.core.api.recursive.comparison.RecursiveComparisonConfiguration;
+import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -124,6 +128,7 @@ import java.util.Collection;
 import java.util.Comparator;
 import java.util.EnumMap;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -131,13 +136,15 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import static com.comet.opik.api.FeedbackScoreBatchItem.FeedbackScoreBatchItemBuilder;
-import static com.comet.opik.api.FeedbackScoreBatchItem.builder;
+import static com.comet.opik.api.FeedbackScoreBatchContainer.FeedbackScoreBatch;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItemThread;
 import static com.comet.opik.api.Visibility.PRIVATE;
 import static com.comet.opik.api.Visibility.PUBLIC;
 import static com.comet.opik.api.resources.utils.ClickHouseContainerUtils.DATABASE_NAME;
@@ -167,6 +174,7 @@ import static com.github.tomakehurst.wiremock.client.WireMock.post;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlPathEqualTo;
 import static java.util.UUID.randomUUID;
 import static java.util.function.Predicate.not;
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
@@ -704,15 +712,15 @@ class TracesResourceTest {
 
             var id = create(trace, okApikey, workspaceName);
 
-            var scores = IntStream.range(0, 5)
-                    .mapToObj(i -> builder()
+            List<FeedbackScoreBatchItem> scores = IntStream.range(0, 5)
+                    .mapToObj(i -> FeedbackScoreBatchItem.builder()
                             .name("name" + i)
                             .id(id)
                             .value(BigDecimal.valueOf(i))
                             .source(ScoreSource.SDK)
                             .projectName(trace.projectName())
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             var batch = FeedbackScoreBatch.builder()
                     .scores(scores)
@@ -1150,15 +1158,15 @@ class TracesResourceTest {
 
             var id = create(trace, API_KEY, TEST_WORKSPACE);
 
-            var scores = IntStream.range(0, 5)
-                    .mapToObj(i -> builder()
+            List<FeedbackScoreBatchItem> scores = IntStream.range(0, 5)
+                    .mapToObj(i -> FeedbackScoreBatchItem.builder()
                             .name("name" + i)
                             .id(id)
                             .value(BigDecimal.valueOf(i))
                             .source(ScoreSource.SDK)
                             .projectName(trace.projectName())
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             var batch = FeedbackScoreBatch.builder()
                     .scores(scores)
@@ -4487,10 +4495,12 @@ class TracesResourceTest {
                     .stream()
                     .flatMap(filter -> filter.getValue()
                             .stream()
-                            .map(operator -> Arguments.of(filter.getKey(), operator, getValidValue(filter.getKey()))));
+                            .flatMap(operator -> Stream.of(
+                                    Arguments.of(true, filter.getKey(), operator, getValidValue(filter.getKey())),
+                                    Arguments.of(false, filter.getKey(), operator, getValidValue(filter.getKey())))));
         }
 
-        private Stream<TraceThreadFilter> getFilterInvalidValueOrKeyForFieldTypeArgs() {
+        private Stream<Arguments> getFilterInvalidValueOrKeyForFieldTypeArgs() {
             return filterQueryBuilder.getSupportedOperators(TraceThreadField.values())
                     .entrySet()
                     .stream()
@@ -4518,7 +4528,10 @@ class TracesResourceTest {
                                         .operator(operator)
                                         .value(getInvalidValue(filter.getKey()))
                                         .build());
-                            }));
+                            }))
+                    .flatMap(operator -> Stream.of(
+                            Arguments.of(true, operator),
+                            Arguments.of(false, operator)));
         }
 
         private Stream<Arguments> getValidFilters() {
@@ -4592,7 +4605,10 @@ class TracesResourceTest {
                                     .map(trace -> trace.toBuilder()
                                             .threadId(UUID.randomUUID().toString())
                                             .build())
-                                    .toList()));
+                                    .toList()))
+                    .flatMap(args -> Stream.of(
+                            Arguments.of(true, args.get()[0], args.get()[1], args.get()[2]),
+                            Arguments.of(false, args.get()[0], args.get()[1], args.get()[2])));
         }
 
         @ParameterizedTest
@@ -4655,7 +4671,8 @@ class TracesResourceTest {
 
         @ParameterizedTest
         @MethodSource("getUnsupportedOperations")
-        void whenFilterUnsupportedOperation__thenReturn400(TraceThreadField field, Operator operator, String value) {
+        void whenFilterUnsupportedOperation__thenReturn400(boolean stream, TraceThreadField field, Operator operator,
+                String value) {
             var filter = TraceThreadFilter.builder()
                     .field(field)
                     .operator(operator)
@@ -4673,24 +4690,25 @@ class TracesResourceTest {
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             var filters = List.of(filter);
 
-            var actualResponse = client.target(URL_TEMPLATE.formatted(baseURI))
-                    .path("threads")
-                    .queryParam("project_name", projectName)
-                    .queryParam("filters", toURLEncodedQueryParam(filters))
-                    .request()
-                    .header(HttpHeaders.AUTHORIZATION, API_KEY)
-                    .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .get();
+            try (var actualResponse = !stream
+                    ? findThreads(projectName, filters, API_KEY, TEST_WORKSPACE)
+                    : streamThreadSearch(projectName, null, filters, API_KEY, TEST_WORKSPACE)) {
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
 
-            var actualError = actualResponse.readEntity(io.dropwizard.jersey.errors.ErrorMessage.class);
-            assertThat(actualError).isEqualTo(expectedError);
+                var actualError = actualResponse.readEntity(io.dropwizard.jersey.errors.ErrorMessage.class);
+                assertThat(actualError).isEqualTo(expectedError);
+            }
+        }
+
+        private Response findThreads(String projectName, List<@NotNull TraceThreadFilter> filters, String apiKey,
+                String testWorkspace) {
+            return traceResourceClient.getTraceThreads(projectName, apiKey, testWorkspace, filters);
         }
 
         @ParameterizedTest
         @MethodSource("getFilterInvalidValueOrKeyForFieldTypeArgs")
-        void whenFilterInvalidValueOrKeyForFieldType__thenReturn400(TraceThreadFilter filter) {
+        void whenFilterInvalidValueOrKeyForFieldType__thenReturn400(boolean stream, TraceThreadFilter filter) {
             var expectedError = new io.dropwizard.jersey.errors.ErrorMessage(
                     400,
                     "Invalid value '%s' or key '%s' for field '%s' of type '%s'".formatted(
@@ -4701,24 +4719,28 @@ class TracesResourceTest {
 
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             var filters = List.of(filter);
-            var actualResponse = client.target(URL_TEMPLATE.formatted(baseURI))
-                    .path("threads")
-                    .queryParam("project_name", projectName)
-                    .queryParam("filters", toURLEncodedQueryParam(filters))
-                    .request()
-                    .header(HttpHeaders.AUTHORIZATION, API_KEY)
-                    .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .get();
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
+            try (var actualResponse = !stream
+                    ? findThreads(projectName, filters, API_KEY, TEST_WORKSPACE)
+                    : streamThreadSearch(projectName, null, filters, API_KEY, TEST_WORKSPACE)) {
 
-            var actualError = actualResponse.readEntity(io.dropwizard.jersey.errors.ErrorMessage.class);
-            assertThat(actualError).isEqualTo(expectedError);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
+
+                var actualError = actualResponse.readEntity(io.dropwizard.jersey.errors.ErrorMessage.class);
+                assertThat(actualError).isEqualTo(expectedError);
+            }
+        }
+
+        private Response streamThreadSearch(String projectName, UUID projectId,
+                List<@NotNull TraceThreadFilter> filters, String apiKey, String testWorkspace) {
+            return traceResourceClient.callSearchTraceThreadStream(projectName, projectId, apiKey, testWorkspace,
+                    filters);
         }
 
         @ParameterizedTest
         @MethodSource("getValidFilters")
         void whenFilterThreads__thenReturnThreadsFiltered(
+                boolean stream,
                 Function<List<Trace>, TraceThreadFilter> getFilter,
                 Function<List<Trace>, List<Trace>> getExpectedThreads,
                 Function<List<Trace>, List<Trace>> getUnexpectedThreads) {
@@ -4763,21 +4785,26 @@ class TracesResourceTest {
 
             var filter = getFilter.apply(expectedTraces);
 
-            assertThreadPage(projectName, null, expectedThreads, List.of(filter), Map.of(), API_KEY, TEST_WORKSPACE);
+            if (!stream) {
+                assertThreadPage(projectName, null, expectedThreads, List.of(filter), Map.of(), API_KEY,
+                        TEST_WORKSPACE);
+            } else {
+                assertTheadStream(projectName, null, API_KEY, TEST_WORKSPACE, expectedThreads, List.of(filter));
+            }
         }
 
         private Stream<Arguments> getStatusFilterTestArguments() {
             return Stream.of(
-                    // When filtering by ACTIVE status, should return only active threads
-                    Arguments.of(TraceThreadStatus.ACTIVE, false),
-                    // When filtering by INACTIVE status, should return only inactive threads
-                    Arguments.of(TraceThreadStatus.INACTIVE, true));
+                    Arguments.of(true, TraceThreadStatus.ACTIVE, false),
+                    Arguments.of(true, TraceThreadStatus.INACTIVE, true),
+                    Arguments.of(false, TraceThreadStatus.ACTIVE, false),
+                    Arguments.of(false, TraceThreadStatus.INACTIVE, true));
         }
 
         @ParameterizedTest
         @MethodSource("getStatusFilterTestArguments")
         @DisplayName("When filtering by thread status, should return only threads with matching status")
-        void whenFilterByStatus__thenReturnThreadsWithMatchingStatus(TraceThreadStatus filterStatus,
+        void whenFilterByStatus__thenReturnThreadsWithMatchingStatus(boolean stream, TraceThreadStatus filterStatus,
                 boolean shouldCloseThread) {
 
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
@@ -4807,6 +4834,7 @@ class TracesResourceTest {
 
             // Close the thread if needed to set its status to INACTIVE
             if (shouldCloseThread) {
+                Mono.delay(Duration.ofMillis(500)).block();
                 traceResourceClient.closeTraceThread(threadId, null, projectName, apiKey, workspaceName);
             }
 
@@ -4816,6 +4844,7 @@ class TracesResourceTest {
             TraceThreadStatus expectedStatus = shouldCloseThread
                     ? TraceThreadStatus.INACTIVE
                     : TraceThreadStatus.ACTIVE;
+
             List<TraceThread> expectedThreads = getExpectedThreads(traces, projectId, threadId, List.of(),
                     expectedStatus);
 
@@ -4826,8 +4855,21 @@ class TracesResourceTest {
                     .value(filterStatus.getValue())
                     .build();
 
-            assertThreadPage(projectName, null, expectedThreads, List.of(statusFilter), Map.of(), apiKey,
-                    workspaceName);
+            if (!stream) {
+                // When not streaming, assert the thread page with the status filter
+                assertThreadPage(null, projectId, expectedThreads, List.of(statusFilter), Map.of(), apiKey,
+                        workspaceName);
+            } else {
+                // When streaming, assert the threads with the status filter
+                assertTheadStream(null, projectId, apiKey, workspaceName, expectedThreads, List.of(statusFilter));
+            }
+        }
+
+        private void assertTheadStream(String projectName, UUID projectId, String apiKey, String workspaceName,
+                List<TraceThread> expectedThreads, List<TraceThreadFilter> filters) {
+            var actualThreads = traceResourceClient.searchTraceThreadsStream(projectName, projectId, apiKey,
+                    workspaceName, filters);
+            TraceAssertions.assertThreads(expectedThreads, actualThreads);
         }
 
         @ParameterizedTest
@@ -4837,14 +4879,16 @@ class TracesResourceTest {
             // Given
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
-            mockTargetWorkspace(API_KEY, workspaceName, workspaceId);
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             var project = factory.manufacturePojo(Project.class).toBuilder()
                     .name(projectName)
                     .build();
 
-            UUID projectId = projectResourceClient.createProject(project, API_KEY, workspaceName);
+            UUID projectId = projectResourceClient.createProject(project, apiKey, workspaceName);
 
             // Create threads with different feedback scores
             var threadId1 = UUID.randomUUID().toString();
@@ -4873,49 +4917,43 @@ class TracesResourceTest {
                     .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
                     .build();
 
-            traceResourceClient.batchCreateTraces(List.of(trace1, trace2, trace3), API_KEY, workspaceName);
+            traceResourceClient.batchCreateTraces(List.of(trace1, trace2, trace3), apiKey, workspaceName);
+
+            // Ensure traces are created with a delay
+            Mono.delay(Duration.ofMillis(500)).block();
+
+            // Close the threads to set their status to INACTIVE
+            traceResourceClient.closeTraceThread(threadId1, null, projectName, apiKey, workspaceName);
+            traceResourceClient.closeTraceThread(threadId2, null, projectName, apiKey, workspaceName);
+            traceResourceClient.closeTraceThread(threadId3, null, projectName, apiKey, workspaceName);
 
             // Add feedback scores with different values
             String scoreName = RandomStringUtils.secure().nextAlphanumeric(10);
-            var scoreItems = List.of(
-                    FeedbackScoreBatchItem.builder()
-                            .threadId(threadId1)
+
+            List<FeedbackScoreBatchItemThread> scoreItems = Stream.of(threadId1, threadId2, threadId3)
+                    .map(threadId -> factory.manufacturePojo(FeedbackScoreBatchItemThread.class).toBuilder()
+                            .threadId(threadId)
                             .projectName(projectName)
                             .name(scoreName)
-                            .value(factory.manufacturePojo(BigDecimal.class)) // Random score
-                            .source(ScoreSource.SDK)
-                            .build(),
-                    FeedbackScoreBatchItem.builder()
-                            .threadId(threadId2)
-                            .projectName(projectName)
-                            .name(scoreName)
-                            .value(factory.manufacturePojo(BigDecimal.class)) // Random score
-                            .source(ScoreSource.SDK)
-                            .build(),
-                    FeedbackScoreBatchItem.builder()
-                            .threadId(threadId3)
-                            .projectName(projectName)
-                            .name(scoreName)
-                            .value(factory.manufacturePojo(BigDecimal.class)) // Random score -
-                            .source(ScoreSource.SDK)
-                            .build());
+                            .build())
+                    .collect(toList());
 
             Instant now = Instant.now();
-            traceResourceClient.threadFeedbackScores(scoreItems, API_KEY, workspaceName);
+            traceResourceClient.threadFeedbackScores(scoreItems, apiKey, workspaceName);
 
             // Create feedback scores for expected threads
             var feedbackScores = scoreItems.stream()
                     .collect(Collectors.toMap(
-                            FeedbackScoreBatchItem::threadId,
+                            FeedbackScoreItem::threadId,
                             item -> List.of(createExpectedFeedbackScore(item, now))));
 
             // Create expected threads in the correct order based on direction
             List<TraceThread> expectedThreads = Stream.of(
-                    getExpectedThreads(List.of(trace1), projectId, threadId1, List.of(), TraceThreadStatus.ACTIVE,
+                    getExpectedThreads(List.of(trace1), projectId, threadId1, List.of(), TraceThreadStatus.INACTIVE,
                             feedbackScores.get(threadId1)).getFirst(),
-                    getExpectedThreads(List.of(trace2), projectId, threadId2, List.of(), TraceThreadStatus.ACTIVE,
+                    getExpectedThreads(List.of(trace2), projectId, threadId2, List.of(), TraceThreadStatus.INACTIVE,
                             feedbackScores.get(threadId2)).getFirst(),
-                    getExpectedThreads(List.of(trace3), projectId, threadId3, List.of(), TraceThreadStatus.ACTIVE,
+                    getExpectedThreads(List.of(trace3), projectId, threadId3, List.of(), TraceThreadStatus.INACTIVE,
                             feedbackScores.get(threadId3)).getFirst())
                     .sorted(Comparator.comparing(thread -> {
                         var score = feedbackScores.get(thread.id()).stream()
@@ -4933,10 +4971,253 @@ class TracesResourceTest {
                             .direction(direction)
                             .build());
 
-            assertThreadPage(projectName, null, expectedThreads, List.of(), Map.of(), API_KEY, workspaceName,
+            assertThreadPage(projectName, null, expectedThreads, List.of(), Map.of(), apiKey, workspaceName,
                     sortingFields);
         }
 
+        private Stream<Arguments> getFeedbackScoreFilterTestArguments() {
+            return Stream.of(
+                    Arguments.of(
+                            true,
+                            Operator.EQUAL,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateExpectedEqualsMatch,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateUnexpectedEqualsMatch,
+                            (Function<BigDecimal, String>) BigDecimal::toString), // Filter value function for EQUAL
+                    Arguments.of(
+                            false,
+                            Operator.EQUAL,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateExpectedEqualsMatch,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateUnexpectedEqualsMatch,
+                            (Function<BigDecimal, String>) BigDecimal::toString),
+                    Arguments.of(
+                            true,
+                            Operator.IS_NOT_EMPTY,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateNotEmptyMatch(name),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateUnexpectedNotEmptyMatch(name),
+                            (Function<BigDecimal, String>) value -> ""), // Empty value for IS_NOT_EMPTY
+                    Arguments.of(
+                            false,
+                            Operator.IS_NOT_EMPTY,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateNotEmptyMatch(name),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateUnexpectedNotEmptyMatch(name),
+                            (Function<BigDecimal, String>) value -> ""),
+                    Arguments.of(
+                            true,
+                            Operator.IS_EMPTY,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateIsEmptyMatch(name),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateNotEmptyMatch(name),
+                            (Function<BigDecimal, String>) value -> ""), // Empty value for IS_EMPTY
+                    Arguments.of(
+                            false,
+                            Operator.IS_EMPTY,
+                            generateExpectedIndices(),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateIsEmptyMatch(name),
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
+                                    value) -> generateNotEmptyMatch(name),
+                            (Function<BigDecimal, String>) value -> "")
+
+            );
+        }
+
+        private Set<Integer> generateExpectedIndices() {
+            return new HashSet<>(List.of(RandomUtils.secure().randomInt(0, 5), RandomUtils.secure().randomInt(0, 5)));
+        }
+
+        private List<FeedbackScoreBatchItemThread> generateIsEmptyMatch(String name) {
+            return PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
+                    .stream()
+                    .filter(score -> !score.name().equals(name))
+                    .toList();
+        }
+
+        private List<FeedbackScoreBatchItemThread> generateNotEmptyMatch(String name) {
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils.manufacturePojoList(factory,
+                    FeedbackScoreBatchItemThread.class);
+
+            scores.set(0, scores.getFirst().toBuilder()
+                    .name(name)
+                    .build());
+
+            return scores;
+        }
+
+        private List<FeedbackScoreBatchItemThread> generateUnexpectedNotEmptyMatch(String name) {
+            return PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
+                    .stream()
+                    .filter(score -> !score.name().equals(name))
+                    .toList();
+        }
+
+        private List<FeedbackScoreBatchItemThread> generateExpectedEqualsMatch(String name, BigDecimal value) {
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils.manufacturePojoList(factory,
+                    FeedbackScoreBatchItemThread.class);
+
+            scores.set(0, scores.getFirst().toBuilder()
+                    .name(name)
+                    .value(value)
+                    .build());
+
+            return scores;
+        }
+
+        private List<FeedbackScoreBatchItemThread> generateUnexpectedEqualsMatch(String name, BigDecimal value) {
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils.manufacturePojoList(factory,
+                    FeedbackScoreBatchItemThread.class);
+
+            scores.set(0, scores.getFirst().toBuilder()
+                    .name(name)
+                    .build());
+
+            return scores;
+        }
+
+        @ParameterizedTest
+        @MethodSource("getFeedbackScoreFilterTestArguments")
+        @DisplayName("When filtering by feedback score with different operators, should return matching threads")
+        void whenFilterByFeedbackScore__thenReturnThreadsWithMatchingFeedbackScore(
+                boolean stream,
+                Operator operator,
+                Set<Integer> expectedThreadIndices,
+                BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>> matchingScoreFunction,
+                BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>> unmatchingScoreFunction,
+                Function<BigDecimal, String> filterValueFunction) {
+
+            // Given
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var project = factory.manufacturePojo(Project.class).toBuilder()
+                    .name(projectName)
+                    .build();
+
+            UUID projectId = projectResourceClient.createProject(project, apiKey, workspaceName);
+
+            // Create threads with different feedback scores
+            var allThreadIds = PodamFactoryUtils.manufacturePojoList(factory, UUID.class);
+
+            // Create traces for threads
+            var allTraces = allThreadIds
+                    .stream()
+                    .map(threadId -> createTrace().toBuilder()
+                            .threadId(threadId.toString())
+                            .projectId(null)
+                            .projectName(projectName)
+                            .startTime(Instant.now().minusSeconds(3).truncatedTo(ChronoUnit.MICROS))
+                            .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
+                            .build())
+                    .toList();
+
+            allTraces.forEach(trace -> traceResourceClient.createTrace(trace, apiKey, workspaceName));
+
+            // Add feedback scores with different values
+            Map<String, Instant> threadIdAndLastUpdateAts = new HashMap<>();
+
+            Mono.delay(Duration.ofMillis(500)).block();
+            allThreadIds.forEach(threadId -> {
+                threadIdAndLastUpdateAts.put(threadId.toString(), Instant.now());
+                traceResourceClient.closeTraceThread(threadId.toString(), null, projectName, apiKey, workspaceName);
+            });
+
+            String targetScoreName = RandomStringUtils.secure().nextAlphanumeric(30);
+            BigDecimal targetScoreValue = factory.manufacturePojo(BigDecimal.class);
+
+            // Create feedback scores based on the provided map
+            List<FeedbackScoreBatchItemThread> expectedScores = allThreadIds
+                    .stream()
+                    .filter(threadId -> isExpected(expectedThreadIndices, threadId, allThreadIds))
+                    .flatMap(threadId -> {
+                        return matchingScoreFunction.apply(targetScoreName, targetScoreValue).stream()
+                                .map(item -> item.toBuilder()
+                                        .threadId(threadId.toString())
+                                        .projectName(projectName)
+                                        .build());
+                    }).collect(Collectors.toList());
+
+            List<FeedbackScoreBatchItemThread> unexpectedScores = allThreadIds.stream()
+                    .filter(threadId -> !isExpected(expectedThreadIndices, threadId, allThreadIds))
+                    .flatMap(threadId -> {
+                        return unmatchingScoreFunction.apply(targetScoreName, targetScoreValue).stream()
+                                .map(item -> item.toBuilder()
+                                        .threadId(threadId.toString())
+                                        .projectName(projectName)
+                                        .build());
+                    }).collect(Collectors.toList());
+
+            List<FeedbackScoreBatchItemThread> scoreItems = Stream
+                    .concat(expectedScores.stream(), unexpectedScores.stream())
+                    .toList();
+
+            // Create feedback scores for threads
+            Instant feedbackScoreCreationTime = Instant.now();
+            traceResourceClient.threadFeedbackScores(scoreItems, apiKey, workspaceName);
+
+            // Determine expected threads based on indices
+            var expectedThreadIds = allThreadIds.reversed()
+                    .stream()
+                    .filter(threadId -> isExpected(expectedThreadIndices, threadId, allThreadIds))
+                    .map(UUID::toString)
+                    .toList();
+
+            // Create expected threads with ALL feedback scores from matching threads
+            Comparator<TraceThread> comparing = Comparator
+                    .comparing((TraceThread traceThread) -> threadIdAndLastUpdateAts.get(traceThread.id())).reversed();
+
+            List<TraceThread> expectedThreads = expectedThreadIds.stream()
+                    .map(threadId -> {
+                        // Get ALL feedback scores for this thread (both expected and unexpected)
+                        var allFeedbackScoresForThread = scoreItems.stream()
+                                .filter(item -> item.threadId().equals(threadId))
+                                .map(item -> createExpectedFeedbackScore(item, feedbackScoreCreationTime))
+                                .toList();
+
+                        var traces = allTraces.stream()
+                                .filter(trace -> trace.threadId().equals(threadId))
+                                .toList();
+
+                        return getExpectedThreads(traces, projectId, threadId, List.of(),
+                                TraceThreadStatus.INACTIVE, allFeedbackScoresForThread).getFirst();
+                    })
+                    .sorted(comparing)
+                    .toList();
+
+            // Create filter for the specific feedback score
+            var feedbackScoreFilter = TraceThreadFilter.builder()
+                    .field(TraceThreadField.FEEDBACK_SCORES)
+                    .operator(operator)
+                    .key(targetScoreName)
+                    .value(filterValueFunction.apply(targetScoreValue))
+                    .build();
+
+            // When & Then
+            if (!stream) {
+                assertThreadPage(null, projectId, expectedThreads, List.of(feedbackScoreFilter), Map.of(), apiKey,
+                        workspaceName);
+            } else {
+                assertTheadStream(null, projectId, apiKey, workspaceName, expectedThreads,
+                        List.of(feedbackScoreFilter));
+            }
+        }
+
+        private static boolean isExpected(Set<Integer> expectedThreadIndices, UUID threadId, List<UUID> allThreadIds) {
+            return expectedThreadIndices.stream()
+                    .anyMatch(index -> allThreadIds.get(index).toString().equals(threadId.toString()));
+        }
     }
 
     private List<TraceThread> getExpectedThreads(List<Trace> expectedTraces, UUID projectId, String threadId,
@@ -5603,7 +5884,7 @@ class TracesResourceTest {
                             .projectName(finalTraces.get(i).projectName())
                             .id(finalTraces.get(i).id())
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             traceResourceClient.feedbackScores(scoreForSpan, apiKey, workspaceName);
 
@@ -5831,14 +6112,16 @@ class TracesResourceTest {
             // Given
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
-            mockTargetWorkspace(API_KEY, workspaceName, workspaceId);
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             var project = factory.manufacturePojo(Project.class).toBuilder()
                     .name(projectName)
                     .build();
 
-            UUID projectId = projectResourceClient.createProject(project, API_KEY, workspaceName);
+            UUID projectId = projectResourceClient.createProject(project, apiKey, workspaceName);
 
             var threadId1 = UUID.randomUUID().toString();
             var threadId2 = UUID.randomUUID().toString();
@@ -5846,7 +6129,7 @@ class TracesResourceTest {
             // Create traces with threads first (threads need traces to exist)
             Trace trace1 = createTrace().toBuilder()
                     .threadId(threadId1)
-                    .projectId(projectId)
+                    .projectId(null)
                     .projectName(projectName)
                     .startTime(Instant.now().minusSeconds(5))
                     .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
@@ -5854,20 +6137,25 @@ class TracesResourceTest {
 
             Trace trace2 = createTrace().toBuilder()
                     .threadId(threadId2)
-                    .projectId(projectId)
+                    .projectId(null)
                     .projectName(projectName)
                     .startTime(Instant.now().minusSeconds(2))
                     .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
                     .build();
 
-            traceResourceClient.batchCreateTraces(List.of(trace1, trace2), API_KEY, workspaceName);
+            traceResourceClient.batchCreateTraces(List.of(trace1, trace2), apiKey, workspaceName);
 
-            var scoreItems = PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class).stream()
+            // Close thread
+            Mono.delay(Duration.ofMillis(500)).block();
+            traceResourceClient.closeTraceThread(threadId1, null, projectName, apiKey, workspaceName);
+            traceResourceClient.closeTraceThread(threadId2, null, projectName, apiKey, workspaceName);
+
+            List<FeedbackScoreBatchItemThread> scoreItems = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class).stream()
                     .map(item -> item.toBuilder()
                             .threadId(threadId1)
                             .projectName(projectName)
                             .projectId(null) // Project ID is not required for thread scores
-                            .source(ScoreSource.SDK)
                             .build())
                     .collect(Collectors.toList());
 
@@ -5912,17 +6200,17 @@ class TracesResourceTest {
                     createExpectedFeedbackScore(scoreItems.get(3), now));
 
             // When
-            traceResourceClient.threadFeedbackScores(scoreItems, API_KEY, workspaceName);
+            traceResourceClient.threadFeedbackScores(scoreItems, apiKey, workspaceName);
 
             // Then - Get threads using getTraceThreads API
-            var traceThreadPage = traceResourceClient.getTraceThreads(projectId, projectName, API_KEY, workspaceName,
+            var traceThreadPage = traceResourceClient.getTraceThreads(projectId, null, apiKey, workspaceName,
                     List.of(), List.of(), Map.of());
 
             // Create expected threads using helper method with actual traces
             var expectedThread1 = getExpectedThreads(List.of(trace1), projectId, threadId1, List.of(),
-                    TraceThreadStatus.ACTIVE, expectedScores1).getFirst();
+                    TraceThreadStatus.INACTIVE, expectedScores1).getFirst();
             var expectedThread2 = getExpectedThreads(List.of(trace2), projectId, threadId2, List.of(),
-                    TraceThreadStatus.ACTIVE, expectedScores2).getFirst();
+                    TraceThreadStatus.INACTIVE, expectedScores2).getFirst();
 
             var expectedThreads = List.of(expectedThread2, expectedThread1);
 
@@ -5933,23 +6221,111 @@ class TracesResourceTest {
         @ParameterizedTest
         @MethodSource("threadFeedbackScoreTestCases")
         @DisplayName("Thread feedback scores contract test")
-        void threadFeedbackScores_contractTest(List<FeedbackScoreBatchItem> scores, int expectedStatus,
+        void threadFeedbackScores_contractTest(List<FeedbackScoreBatchItemThread> scores, int expectedStatus,
                 String expectedError) {
             // Given
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
-            mockTargetWorkspace(API_KEY, workspaceName, workspaceId);
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
             // When
-            try (var response = traceResourceClient.callThreadFeedbackScores(scores, API_KEY, workspaceName)) {
+            try (var response = traceResourceClient.callThreadFeedbackScores(scores, apiKey, workspaceName)) {
+
                 // Then
                 assertThat(response.getStatus()).isEqualTo(expectedStatus);
-                if (expectedStatus == HttpStatus.SC_NO_CONTENT) {
-                    assertThat(response.hasEntity()).isFalse();
-                } else {
-                    assertThat(response.readEntity(ErrorMessage.class).errors()).contains(expectedError);
-                }
+                assertThat(response.readEntity(ErrorMessage.class).errors()).contains(expectedError);
             }
+        }
+
+        @Test
+        @DisplayName("When scoring batch of threads with threads that are open, then return 409")
+        void scoreBatchOfThreads_withThreadsAreOpen_thenReturns409() {
+            // Given
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class).stream()
+                    .map(item -> item.toBuilder()
+                            .threadId(UUID.randomUUID().toString())
+                            .projectName(projectName)
+                            .projectId(null) // Project ID is not required for thread scores
+                            .source(ScoreSource.SDK)
+                            .build())
+                    .collect(Collectors.toList());
+
+            List<Trace> traces = scores.stream()
+                    .map(item -> createTrace().toBuilder()
+                            .threadId(item.threadId())
+                            .projectId(null)
+                            .projectName(projectName)
+                            .build())
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
+
+            // When
+            try (var response = traceResourceClient.callThreadFeedbackScores(scores, apiKey, workspaceName)) {
+
+                // Then
+                assertOpenThreadScoreConflict(scores, response);
+            }
+        }
+
+        @Test
+        @DisplayName("When scoring batch of threads with threads that dont exist, then return 409")
+        void scoreBatchOfThreads_withThreadsDontExist_thenReturns409() {
+            // Given
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class).stream()
+                    .map(item -> item.toBuilder()
+                            .threadId(UUID.randomUUID().toString())
+                            .projectName(projectName)
+                            .projectId(null) // Project ID is not required for thread scores
+                            .source(ScoreSource.SDK)
+                            .build())
+                    .collect(Collectors.toList());
+
+            // When
+            try (var response = traceResourceClient.callThreadFeedbackScores(scores, apiKey, workspaceName)) {
+
+                // Then
+                assertOpenThreadScoreConflict(scores, response);
+            }
+        }
+
+        private static void assertOpenThreadScoreConflict(List<FeedbackScoreBatchItemThread> scores,
+                Response response) {
+            String threadIds = scores.stream()
+                    .map(FeedbackScoreItem::threadId)
+                    .sorted()
+                    .collect(Collectors.joining(", "));
+
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_CONFLICT);
+            assertThat(response.hasEntity()).isTrue();
+
+            var errorMessage = response.readEntity(io.dropwizard.jersey.errors.ErrorMessage.class);
+            assertThat(errorMessage.getCode()).isEqualTo(HttpStatus.SC_CONFLICT);
+            assertThat(errorMessage.getMessage())
+                    .isEqualTo("Threads must be closed before scoring. Thread IDs are active: '[%s]'"
+                            .formatted(threadIds));
         }
 
         Stream<Arguments> threadFeedbackScoreTestCases() {
@@ -5959,7 +6335,7 @@ class TracesResourceTest {
             // Valid case
             String score1 = RandomStringUtils.secure().nextAlphanumeric(10);
 
-            var validScore = initFeedbackScoreItem()
+            var validScore = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
@@ -5967,7 +6343,7 @@ class TracesResourceTest {
                     .build();
 
             // Missing thread ID case
-            var missingThreadIdScore = initFeedbackScoreItem()
+            var missingThreadIdScore = initThreadFeedbackItem()
                     .threadId(null)
                     .projectName(projectName)
                     .projectId(null)
@@ -5975,7 +6351,7 @@ class TracesResourceTest {
                     .build();
 
             // Missing thread ID
-            var blankThreadId = initFeedbackScoreItem()
+            var blankThreadId = initThreadFeedbackItem()
                     .threadId("")
                     .projectName(projectName)
                     .projectId(null)
@@ -5983,7 +6359,7 @@ class TracesResourceTest {
                     .build();
 
             // Missing value
-            var missingValueCase = initFeedbackScoreItem()
+            var missingValueCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
@@ -5991,21 +6367,21 @@ class TracesResourceTest {
                     .value(null)
                     .build();
 
-            var missingNameCase = initFeedbackScoreItem()
+            var missingNameCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
                     .name(null)
                     .build();
 
-            var blankNameCase = initFeedbackScoreItem()
+            var blankNameCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
                     .name("")
                     .build();
 
-            var missingSourceCase = initFeedbackScoreItem()
+            var missingSourceCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
@@ -6013,9 +6389,6 @@ class TracesResourceTest {
                     .build();
 
             return Stream.of(
-                    // Valid case - 204 No Content
-                    arguments(List.of(validScore), HttpStatus.SC_NO_CONTENT, null),
-
                     // Missing thread ID - 422 Unprocessable Entity
                     arguments(List.of(missingThreadIdScore), HttpStatus.SC_UNPROCESSABLE_ENTITY,
                             "scores[0].threadId must not be blank"),
@@ -6042,7 +6415,11 @@ class TracesResourceTest {
         }
     }
 
-    private FeedbackScore createExpectedFeedbackScore(FeedbackScoreBatchItem item, Instant now) {
+    private FeedbackScoreBatchItemThread.FeedbackScoreBatchItemThreadBuilder<?, ?> initThreadFeedbackItem() {
+        return factory.manufacturePojo(FeedbackScoreBatchItemThread.class).toBuilder();
+    }
+
+    private FeedbackScore createExpectedFeedbackScore(FeedbackScoreItem item, Instant now) {
         return FeedbackScore.builder()
                 .name(item.name())
                 .value(item.value())
@@ -6090,39 +6467,28 @@ class TracesResourceTest {
 
             traceResourceClient.batchCreateTraces(List.of(trace), apiKey, workspaceName);
 
-            var scoreItems = PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class);
+            // Close thread
+            Mono.delay(Duration.ofMillis(500)).block();
+            traceResourceClient.closeTraceThread(threadId, null, projectName, apiKey, workspaceName);
 
-            String score1 = RandomStringUtils.secure().nextAlphanumeric(10);
-            String score2 = RandomStringUtils.secure().nextAlphanumeric(10);
-            String score3 = RandomStringUtils.secure().nextAlphanumeric(10);
-
-            scoreItems.set(0, scoreItems.get(0).toBuilder()
-                    .threadId(threadId)
-                    .projectName(projectName)
-                    .projectId(null)
-                    .name(score1)
-                    .build());
-
-            scoreItems.set(1, scoreItems.get(1).toBuilder()
-                    .threadId(threadId)
-                    .projectName(projectName)
-                    .projectId(null)
-                    .name(score2)
-                    .build());
-
-            scoreItems.set(2, scoreItems.get(2).toBuilder()
-                    .threadId(threadId)
-                    .projectName(projectName)
-                    .projectId(null)
-                    .name(score3)
-                    .build());
+            List<FeedbackScoreBatchItemThread> scoreItems = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
+                    .stream()
+                    .map(item -> item.toBuilder()
+                            .threadId(threadId)
+                            .projectName(projectName)
+                            .projectId(null)
+                            .build())
+                    .collect(Collectors.toList());
 
             // Create expected thread with initial scores
             Instant now = Instant.now();
             var expectedInitialScores = List.of(
                     createExpectedFeedbackScore(scoreItems.get(0), now),
                     createExpectedFeedbackScore(scoreItems.get(1), now),
-                    createExpectedFeedbackScore(scoreItems.get(2), now));
+                    createExpectedFeedbackScore(scoreItems.get(2), now),
+                    createExpectedFeedbackScore(scoreItems.get(3), now),
+                    createExpectedFeedbackScore(scoreItems.get(4), now));
 
             // When
             traceResourceClient.threadFeedbackScores(scoreItems, apiKey, workspaceName);
@@ -6132,11 +6498,12 @@ class TracesResourceTest {
                     List.of(), List.of(), Map.of());
 
             var expectedInitialThread = getExpectedThreads(List.of(trace), projectId, threadId, List.of(),
-                    TraceThreadStatus.ACTIVE, expectedInitialScores).get(0);
+                    TraceThreadStatus.INACTIVE, expectedInitialScores).getFirst();
 
             TraceAssertions.assertThreads(List.of(expectedInitialThread), initialThreadPage.content());
 
-            Set<String> scoresToDelete = Set.of(score1, score2);
+            Set<String> scoresToDelete = Set.of(scoreItems.getFirst().name(), scoreItems.get(1).name(),
+                    scoreItems.get(3).name(), scoreItems.getLast().name());
 
             // And When
             traceResourceClient.deleteThreadFeedbackScores(projectName, threadId, scoresToDelete, apiKey,
@@ -6151,7 +6518,7 @@ class TracesResourceTest {
                     createExpectedFeedbackScore(scoreItems.get(2), now));
 
             var expectedRemainingThread = getExpectedThreads(List.of(trace), projectId, threadId, List.of(),
-                    TraceThreadStatus.ACTIVE, expectedRemainingScores).get(0);
+                    TraceThreadStatus.INACTIVE, expectedRemainingScores).getFirst();
 
             TraceAssertions.assertThreads(List.of(expectedRemainingThread), remainingThreadPage.content());
         }
@@ -6164,11 +6531,13 @@ class TracesResourceTest {
             // Given
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
-            mockTargetWorkspace(API_KEY, workspaceName, workspaceId);
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
             // When
             try (var response = traceResourceClient.callDeleteThreadFeedbackScores(projectName, threadId, scoreNames,
-                    API_KEY, workspaceName)) {
+                    apiKey, workspaceName)) {
                 // Then
                 assertThat(response.getStatus()).isEqualTo(expectedStatus);
 
@@ -6827,7 +7196,8 @@ class TracesResourceTest {
                             .map(item -> FeedbackScoreMapper.INSTANCE.toFeedbackScoreBatchItem(
                                     span.id(), projectName, item)))
                     .toList();
-            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName, apiKey);
+            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName,
+                    apiKey);
 
             getAndAssertPage(workspaceName, projectName, null, List.of(), traces, traces.reversed(), List.of(), apiKey);
             getAndAssertPageSpans(workspaceName, projectName, List.of(), spans, spans.reversed(), List.of(), apiKey);
@@ -7006,7 +7376,8 @@ class TracesResourceTest {
                             .map(item -> FeedbackScoreMapper.INSTANCE.toFeedbackScoreBatchItem(
                                     span.id(), projectName, item)))
                     .toList();
-            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName, apiKey);
+            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName,
+                    apiKey);
 
             getAndAssertPage(workspaceName, projectName, null, List.of(), traces, traces.reversed(), List.of(), apiKey);
             getAndAssertPageSpans(workspaceName, projectName, List.of(), spans, spans.reversed(), List.of(), apiKey);
@@ -7946,7 +8317,7 @@ class TracesResourceTest {
                             IntStream.range(0, 1001)
                                     .mapToObj(__ -> initFeedbackScoreItem()
                                             .projectName(DEFAULT_PROJECT).build())
-                                    .toList())
+                                    .collect(toList()))
                             .build(), "scores size must be between 1 and 1000"),
                     arguments(
                             FeedbackScoreBatch.builder()
@@ -8096,7 +8467,8 @@ class TracesResourceTest {
         @ParameterizedTest
         @MethodSource("invalidRequestBodyParams")
         @DisplayName("when batch request is invalid, then return bad request")
-        void feedback__whenBatchRequestIsInvalid__thenReturnBadRequest(FeedbackScoreBatch batch, String errorMessage) {
+        void feedback__whenBatchRequestIsInvalid__thenReturnBadRequest(FeedbackScoreBatchContainer batch,
+                String errorMessage) {
             try (var actualResponse = client.target(URL_TEMPLATE.formatted(baseURI))
                     .path("feedback-scores")
                     .request()
@@ -8226,12 +8598,12 @@ class TracesResourceTest {
                     .build();
             var id = create(expectedTrace, API_KEY, TEST_WORKSPACE);
 
-            var scores = IntStream.range(0, 1000)
+            List<FeedbackScoreBatchItem> scores = IntStream.range(0, 1000)
                     .mapToObj(__ -> initFeedbackScoreItem()
                             .projectName(DEFAULT_PROJECT)
                             .id(id)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
             traceResourceClient.feedbackScores(scores, API_KEY, TEST_WORKSPACE);
         }
 
@@ -8248,7 +8620,7 @@ class TracesResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, API_KEY)
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(score))))) {
+                    .put(Entity.json(FeedbackScoreBatch.builder().scores(List.of(score)).build()))) {
 
                 assertErrorResponse(actualResponse, "trace id must be a version 7 UUID", 400);
             }
@@ -8271,18 +8643,18 @@ class TracesResourceTest {
 
             traceResourceClient.batchCreateTraces(traces, API_KEY, TEST_WORKSPACE);
 
-            var scores = traces.stream()
+            List<FeedbackScoreBatchItem> scores = traces.stream()
                     .map(trace -> initFeedbackScoreItem()
                             .id(trace.id())
                             .projectName(projectNameModifier.apply(projectName))
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             traceResourceClient.feedbackScores(scores, API_KEY, TEST_WORKSPACE);
 
             var expectedTracesWithScores = traces.stream()
                     .map(trace -> {
-                        FeedbackScoreBatchItem feedbackScoreBatchItem = scores.stream()
+                        FeedbackScoreItem feedbackScoreBatchItem = scores.stream()
                                 .filter(score -> score.id().equals(trace.id()))
                                 .findFirst()
                                 .orElseThrow();
@@ -8302,12 +8674,11 @@ class TracesResourceTest {
         }
     }
 
-    private FeedbackScoreBatchItemBuilder initFeedbackScoreItem() {
-        return factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
-                .threadId(null);
+    private FeedbackScoreBatchItemBuilder<?, ?> initFeedbackScoreItem() {
+        return factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder();
     }
 
-    private FeedbackScore mapFeedbackScore(FeedbackScoreBatchItem feedbackScoreBatchItem) {
+    private FeedbackScore mapFeedbackScore(FeedbackScoreItem feedbackScoreBatchItem) {
         return FeedbackScore.builder()
                 .name(feedbackScoreBatchItem.name())
                 .value(feedbackScoreBatchItem.value())
@@ -8355,6 +8726,54 @@ class TracesResourceTest {
             traceResourceClient.createMultiValueScores(otherNames, unexpectedProject, apiKey, workspaceName);
 
             fetchAndAssertResponse(names, projectId, apiKey, workspaceName);
+        }
+    }
+
+    @Nested
+    @DisplayName("Get Trace Threads Feedback Score names")
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    class GetTraceThreadsFeedbackScoreNames {
+
+        @Test
+        @DisplayName("when get trace threads feedback score names, then return feedback score names")
+        void getTraceThreadsFeedbackScoreNames__whenGetTraceThreadsFeedbackScoreNames__thenReturnFeedbackScoreNames() {
+
+            // given
+            var apiKey = UUID.randomUUID().toString();
+            var workspaceId = UUID.randomUUID().toString();
+            var workspaceName = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            String projectName = UUID.randomUUID().toString();
+
+            UUID projectId = projectResourceClient.createProject(projectName, apiKey, workspaceName);
+            Project project = projectResourceClient.getProject(projectId, apiKey, workspaceName);
+
+            List<String> names = PodamFactoryUtils.manufacturePojoList(factory, String.class);
+            List<String> otherNames = PodamFactoryUtils.manufacturePojoList(factory, String.class);
+
+            // Create multiple values feedback scores for trace threads
+            List<String> multipleValuesFeedbackScores = names.subList(0, names.size() - 1);
+
+            createMultiValueTraceThreadScores(multipleValuesFeedbackScores, project, apiKey, workspaceName);
+
+            createMultiValueTraceThreadScores(List.of(names.getLast()), project, apiKey, workspaceName);
+
+            // Create unexpected feedback scores for a different project
+            String unexpectedProjectName = RandomStringUtils.secure().nextAlphanumeric(20);
+            UUID unexpectedProjectId = projectResourceClient.createProject(unexpectedProjectName, apiKey,
+                    workspaceName);
+            Project unexpectedProject = projectResourceClient.getProject(unexpectedProjectId, apiKey, workspaceName);
+
+            createMultiValueTraceThreadScores(otherNames, unexpectedProject, apiKey, workspaceName);
+
+            // when
+            FeedbackScoreNames actualNames = traceResourceClient.getTraceThreadsFeedbackScoreNames(projectId, apiKey,
+                    workspaceName);
+
+            // then
+            assertFeedbackScoreNames(actualNames, names);
         }
     }
 
@@ -9015,6 +9434,7 @@ class TracesResourceTest {
             });
 
             // When: Manually close the thread
+            Mono.delay(Duration.ofMillis(500)).block();
             traceResourceClient.closeTraceThread(threadId, projectId, null, apiKey, workspaceName);
 
             // Then: Assert that the thread is closed using getTraceThreads API
@@ -9037,6 +9457,48 @@ class TracesResourceTest {
                     TraceThreadStatus.ACTIVE);
 
             TraceAssertions.assertThreads(expectedReopenedThreads, reopenedThreadPage.content());
+        }
+
+        @Test
+        @DisplayName("when trace thread was created before the entity was introduced, then it should be created as inactive")
+        void manualCloseAndReopeningTraceThread__whenThreadCreatedBeforeEntityIntroduced__thenInactive(
+                TransactionTemplateAsync templateAsync) {
+
+            // Given: Ingestion of a trace with a thread
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            UUID projectId = projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+            String threadId = randomUUID().toString();
+
+            // Create a trace with the thread
+            Trace trace = createTrace().toBuilder()
+                    .threadId(threadId)
+                    .projectId(projectId)
+                    .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
+                    .createdBy(USER)
+                    .lastUpdatedBy(USER)
+                    .build();
+
+            // Create the trace via DB to simulate the scenario where the thread was created before the entity was introduced
+            TraceDBUtils.createTraceViaDB(trace, workspaceId, templateAsync);
+
+            // When: Manually close the thread
+            traceResourceClient.closeTraceThread(threadId, projectId, null, apiKey, workspaceName);
+
+            // Then: Assert that the thread is closed using getTraceThreads API
+            var closedThreadPage = traceResourceClient.getTraceThreads(projectId, projectName, apiKey, workspaceName,
+                    List.of(), List.of(), Map.of());
+
+            var expectedClosedThreads = getExpectedThreads(List.of(trace), projectId, threadId, List.of(),
+                    TraceThreadStatus.INACTIVE);
+
+            TraceAssertions.assertThreads(expectedClosedThreads, closedThreadPage.content());
         }
     }
 
@@ -9069,7 +9531,7 @@ class TracesResourceTest {
         }
     }
 
-    private void createAndAssertForSpan(FeedbackScoreBatch request, String workspaceName, String apiKey) {
+    private void createAndAssertForSpan(FeedbackScoreBatchContainer request, String workspaceName, String apiKey) {
         try (var actualResponse = client.target(URL_TEMPLATE_SPANS.formatted(baseURI))
                 .path("feedback-scores")
                 .request()
@@ -9111,4 +9573,43 @@ class TracesResourceTest {
     private void mockGetWorkspaceIdByName(String workspaceName, String workspaceId) {
         AuthTestUtils.mockGetWorkspaceIdByName(wireMock.server(), workspaceName, workspaceId);
     }
+
+    private List<List<FeedbackScoreBatchItemThread>> createMultiValueTraceThreadScores(
+            List<String> multipleValuesFeedbackScores,
+            Project project, String apiKey, String workspaceName) {
+        return IntStream.range(0, multipleValuesFeedbackScores.size())
+                .mapToObj(i -> {
+
+                    String threadId = UUID.randomUUID().toString();
+
+                    Trace trace1 = createTrace().toBuilder()
+                            .projectName(project.name())
+                            .threadId(threadId)
+                            .build();
+
+                    Trace trace2 = createTrace().toBuilder()
+                            .projectName(project.name())
+                            .threadId(threadId)
+                            .build();
+
+                    traceResourceClient.batchCreateTraces(List.of(trace1, trace2), apiKey, workspaceName);
+
+                    // Close thread
+                    Mono.delay(Duration.ofMillis(500)).block();
+                    traceResourceClient.closeTraceThread(threadId, project.id(), null, apiKey, workspaceName);
+
+                    List<FeedbackScoreBatchItemThread> scores = multipleValuesFeedbackScores.stream()
+                            .map(name -> factory.manufacturePojo(FeedbackScoreBatchItemThread.class).toBuilder()
+                                    .name(name)
+                                    .projectName(project.name())
+                                    .threadId(threadId)
+                                    .build())
+                            .collect(Collectors.toList());
+
+                    traceResourceClient.threadFeedbackScores(scores, apiKey, workspaceName);
+
+                    return scores;
+                }).toList();
+    }
+
 }
